# Sudoku

./: .gitignore  Dockerfile  README.md  config.js  index.html  script.js
backend/: CMakeLists.txt
backend/include/: image_intake_service.h  vision_pipeline.h
backend/src/: image_intake_service.cpp  main.cpp  server.cpp  vision_pipeline.cpp
frontend/: config.js  index.html  script.js
